# iwd_wofi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
iwd_wofi/: __init__.py  __main__.py  agent.py  dbus_helper.py  functions.py  manager.py  menus.py  notify.py  wofi.py
